--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <script async defer src="index.js"></script>
 
 </head>
-
+<style>
+body {
+  background-image: url('https://images.unsplash.com/photo-1485470733090-0aae1788d5af?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=917&q=80');
+  background-repeat:repeat;
+}
+</style>
 <body style="background-color: #e6e1e1">
 
     <!-- Navigation Bar -->
