background image changed

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 </head>
 <style>
 body {
-  background-image: url('https://images.unsplash.com/photo-1485470733090-0aae1788d5af?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=917&q=80');
-  background-repeat:repeat;
+  background-image: url('https://images.unsplash.com/photo-1560251085-d9c1dc542960?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+  background-size:cover;
+  background-repeat:no-repeat;
 }
 </style>
 <body style="background-color: #e6e1e1">
